-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1075 2011-06-04 21:51:11 guru Exp $
-----------------------------------------------------------------------------------------

2011-06-04	pwessel
	* gmt_plot.c:		Eliminated notch in corners of linear map frames and color bars.

2011-06-02	pwessel
	* psscale_func.c:	Enhanced -E to accept optional +n[<label>] which will
				plot a NaN-color rectangle at the start of the bar, and
				label it with <label> [NaN].

2011-06-02	pwessel
	* grdfilter_func.c:	Added rectangular filtering and automatic resampling to
				input resolution for high-pass filters.  Added impulse
				response script to test suite.

2011-06-02	remko
	* pslib.c:		Smarter version of psl_shorten_path produces more straight
				line segments.
	* test/*/orig/*.ps, doc/fig/*.ps:	Updates as result of psl_shorten_path change.
	* psxy[z]_func.c:	Corrected inadvertent scaling of angles when PROJ_LENGTH_UNIT=cm
	* grdsample_func.c:	Fixed several bugs related to wrapping of periodical grids.

2011-06-01	pwessel
	* grdedit_func.c:	The -N option did not consider replicate w/e points for
				gridline-registered grids.
	* gmt_support.c:	Added check to report if repeating east/west duplicate
				nodes in global gridline-registered grids are in fact
				not identical.
	* grdcontour_func.c:	Improving detection of closed contours that should be ticked
				and marked (via -T) when such contours cross periodic boundaries
				or are polar caps.

2011-06-01	remko
	* gmt_init.c:		Default scale in -i option should be 1, not 0.
	* pswiggle_func.c:	Added [-|=|+] to prepend to -G option to select fill for
				positive AND/or negative wiggles. Made -N option obsolete.

2011-05-31	pwessel
	* grdfilter_func.c:	Added some test/debug options under DEBUG mode.
				Convolution weights were y-transposed so gave wrong results
				at/near the poles for spherical filtering.  Also, some nodes